Fixed wrong margin in video modal

--- a/app/javascript/components/modals/video/video-styles.scss
+++ b/app/javascript/components/modals/video/video-styles.scss
@@ -1,6 +1,8 @@
 @import '~styles/settings.scss';
 
 .c-modal-video {
+  max-width: unset;
+
   .modal-content,
   .modal-title {
     padding: 0;
